2009-07-13  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Ariya Hidayat.

        Removed 20 more frame tests from the Qt skip list as they pass now
        after making sure we only dump after the main frame's loadFinished
        signal.

        * platform/qt/Skipped:

2009-07-13  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Ariya Hidayat.

        Remove fast/frames/removal-before-attach-crash.html and
        fast/dom/StyleSheet/ownerNode-lifetime-2.html from the Qt DRT skip
        list, as they pass now with support for the GCController.

        * platform/qt/Skipped:

2009-07-13  Jan Michael Alonzo  <jmalonzo@webkit.org>

        <https://bugs.webkit.org/show_bug.cgi?id=27171> [Gtk]
        REGRESSION (r45440): fails at fast/events/frame-programmatic-focus.html

        Reviewed by Gustavo Noronha.

        Unskip fast/events/frame-programmatic-focus.html

        * platform/gtk/Skipped:

2009-07-13  Jan Michael Alonzo  <jmalonzo@webkit.org>

        https://bugs.webkit.org/show_bug.cgi?id=26718 [Gtk] Add support for javascript windows for DRT

        Reviewed by Gustavo Noronha and Xan Lopez.

        Unskip tests that now pass due to support for JS windows in Gtk DRT.

        * platform/gtk/Skipped:

2009-07-13  Simon Hausmann  <simon.hausmann@nokia.com>

        Rubber-stamped by Oliver Hunt.

        Tweak mouseout-dead-subframe.html to be more robust.

        The test calls notifyDone() and then dumpAsText(). The latter call has no effect
        as notifyDone() performs the dump, but it passes in the mac DRT because the mime-type
        of the .html file is detected as text/plain and therefore the text is dumped instead
        of the render tree.

        Changed the testcase to call dumpAsText() first and then notifyDone(), to make it
        pass without relying on the mime type detection.

        That also makes the test pass in the Qt DRT.
