@@ -2,6 +2,16 @@
 
         Reviewed by Ariya Hidayat.
 
+        Setup the path in the Qt DRT for HTML 5 Databases, to enable some of
+        the storage layout tests.
+
+        * DumpRenderTree/qt/main.cpp:
+        (main):
+
+2009-07-13  Simon Hausmann  <hausmann@webkit.org>
+
+        Reviewed by Ariya Hidayat.
+
         Make the test output more robust by dumping only when the main
         frame finishes loading, instead of when _any_ frame finishes.
 
