@@ -2,6 +2,14 @@
 
         Reviewed by Ariya Hidayat.
 
+        Enable some storage layout tests in the Qt DRT, as the pass now.
+
+        * platform/qt/Skipped:
+
+2009-07-13  Simon Hausmann  <hausmann@webkit.org>
+
+        Reviewed by Ariya Hidayat.
+
         Removed 20 more frame tests from the Qt skip list as they pass now
         after making sure we only dump after the main frame's loadFinished
         signal.
